fix css lesson 1

--- a/co-work/lesson1/booking.html
+++ b/co-work/lesson1/booking.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/benefits.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/booking.css" />
+    <link href='css/core.css' rel='stylesheet' type="text/css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/responsive.css" />
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
