--- a/co-work/lesson1/pricing.html
+++ b/co-work/lesson1/pricing.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/benefits.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/pricing.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/responsive.css" />
+    <link href='css/core.css' rel='stylesheet' type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 
