--- a/co-work/lesson1/aboutus.html
+++ b/co-work/lesson1/aboutus.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/aboutus.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/responsive.css" />
-    <link href='css/lession/02.css' rel='stylesheet' type="text/css">
+    <link href='css/core.css' rel='stylesheet' type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 
