--- a/co-work/lesson1/index.html
+++ b/co-work/lesson1/index.html
@@ -18,8 +18,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/responsive.css" />
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link href='css/lession/01.css' rel='stylesheet' type="text/css">
-    <link href='css/lession/02.css' rel='stylesheet' type="text/css">
+    <link href='css/core.css' rel='stylesheet' type="text/css">
 
 </head>
 
