--- a/co-work/lesson1/aboutus.html
+++ b/co-work/lesson1/aboutus.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/aboutus.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/responsive.css" />
     <link href='css/core.css' rel='stylesheet' type="text/css">
+    <link rel="stylesheet" type="text/css" href="css/lession/02.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 
